# acplt-ks

./: .gitlab-ci.yml  CMakeLists.txt
cmake/: gcc-linux-wago-ipc.cmake  mingw-w64-i686.cmake
ks/: CMakeLists.txt
ks/src/: sorter.cpp  templates.cpp
oncrpc/: CMakeLists.txt
oncrpc/librpc/: auth_non.c  auth_uni.c  bcopy.c  bindresv.c  clnt_gen.c  clnt_per.c  clnt_raw.c  clnt_sim.c  clnt_tcp.c  clnt_udp.c  get_myad.c  getrpcen.c  getrpcpo.c  makefile.mingw  nt.c  pmap_rmt.c  portmap.c  rpc_call.c  svc.c  svc_autu.c  svc_run.c  svc_simp.c  svc_tcp.c  svc_udp.c  xdr.c  xdr_arra.c  xdr_floa.c  xdr_mem.c  xdr_rec.c  xdr_refe.c
oncrpc/rpc/: bcopy.h  rpc.h  types.h  xdr.h
oncrpc/rpcgen/: rpc_svco.c
oncrpc/rpcinfo/: rpcinfo.c
plt/: CMakeLists.txt
plt/include/plt/: hashtable.h
plt/src/: CMakeLists.txt
